<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ime"
        android:hint="@string/unesi_ime_korisnika"
        app:layout_constraintEnd_toStartOf="@id/Unesi"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ime"
        android:hint="@string/unesi_prezime_korisnika"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@id/Unesi"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/prezime"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/prezime"
        android:hint="@string/unesi_oib_korisnika"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@id/Unesi"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/oib"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/oib"
        android:hint="@string/unesi_datum_ro_enja_korisnika"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@id/Unesi"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/datRodenja"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Unesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/unesi"
        app:layout_constraintBottom_toBottomOf="@+id/datRodenja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ime"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/RV1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datRodenja"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>